# ai-visibility-audit-cli

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements.txt
ai_visibility_audit/: __init__.py  api_client.py  checks.py  cli.py  inputs.py  reports.py
ai_visibility_audit_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: artifact-contract.md  installation.md  parity-gap-register.md  usage.md
examples/: sample-request.json  sample-scan-response.json
tests/: test_api_client.py  test_cli.py  test_reports.py
tests/fixtures/artifact-contract/: expected-ai-visibility-audit.json  expected-ai-visibility-audit.md  expected-ai-visibility-audit.txt
tests/fixtures/report-regressions/repeated-js-shell/: expected-ai-visibility-audit.json  expected-ai-visibility-audit.md  expected-ai-visibility-audit.txt  request.json  response.json
tests/fixtures/report-regressions/stale-php-noise/: expected-ai-visibility-audit.json  expected-ai-visibility-audit.md  expected-ai-visibility-audit.txt  request.json  response.json
tests/fixtures/report-regressions/utility-path-suppression/: expected-ai-visibility-audit.json  expected-ai-visibility-audit.md  expected-ai-visibility-audit.txt  request.json  response.json
