[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-visibility-audit-cli"
version = "0.1.0"
description = "AI Visibility Audit by PromptScout thin CLI wrapper"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.1,<1.0",
  "pydantic>=2.12.5,<3.0",
]

[project.scripts]
ai-visibility-audit = "ai_visibility_audit.cli:entrypoint"
