[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptscout-ai-visibility-audit"
version = "0.1.0"
description = "Official CLI and artifact contract for AI Visibility Audit by PromptScout"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "PromptScout" }]
keywords = [
  "ai visibility",
  "citation readiness",
  "promptscout",
  "website audit",
  "cli",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
]
dependencies = [
  "httpx>=0.28.1,<1.0",
  "pydantic>=2.12.5,<3.0",
]

[project.urls]
Homepage = "https://github.com/lukasz-starosta/ai-visibility-audit-cli"
Documentation = "https://github.com/lukasz-starosta/ai-visibility-audit-cli/tree/main/docs"
Repository = "https://github.com/lukasz-starosta/ai-visibility-audit-cli"
Issues = "https://github.com/lukasz-starosta/ai-visibility-audit-cli/issues"

[project.scripts]
ai-visibility-audit = "ai_visibility_audit.cli:entrypoint"

[dependency-groups]
dev = [
  "pytest>=8.4.2,<9.0",
]
